--- a/app/views/user_searchs/following_users.html.erb
+++ b/app/views/user_searchs/following_users.html.erb
@@ -2,7 +2,7 @@
 <%= stylesheet_link_tag "user_searchs/index-rspnsv.css", :media => "all" %>
         <content>
             <%= form_tag({action: 'index'}, {method: :get}) do %>
-              <input type="text" name="search" id="search" class="search-box" placeholder="探したいユーザ名を入力">
+              <input type="text" name="search" id="search" class="search-box" placeholder="探したいユーザー名を入力">
               <%= submit_tag '検索', :name => nil %>
             <% end %>
             <div class="discription">
