--- a/app/views/user_searchs/index.html.erb
+++ b/app/views/user_searchs/index.html.erb
@@ -3,7 +3,7 @@
         <content>
             <h1>検索結果</h1>
             <%= form_tag({action: 'index'}, {method: :get}) do %>
-              <input type="text" name="search" id="search" class="search-box" placeholder="探したいユーザ名を入力">
+              <input type="text" name="search" id="search" class="search-box" placeholder="探したいユーザー名を入力">
               <%= submit_tag '検索', :name => nil %>
             <% end %>
             <div class="discription">
