--- a/app/views/user_searchs/following_users.html.erb
+++ b/app/views/user_searchs/following_users.html.erb
@@ -7,7 +7,7 @@
             <% end %>
             <div class="discription">
                 <p class="disc-1"><a href="/user_searchs/recomend_users">おすすめの<br>ユーザー</a></p>
-                <p class="disc-2"><a href="/user_searchs/following_users">フォロー済みの<br>ユーザー</a></p>
+                <p class="disc-2"><a href="/user_searchs/following_users">フォロー済の<br>ユーザー</a></p>
                 <p class="disc-3"><a href="/user_searchs/facebook_users">Facebookの<br>友達</a></p>
             </div>
             <% if @following_users %>
