--- a/app/views/mymap_searchs/following_mymaps.html.erb
+++ b/app/views/mymap_searchs/following_mymaps.html.erb
@@ -2,12 +2,12 @@
 <%= stylesheet_link_tag "mymap_searchs/following_mymaps-rspnsv", :media => "all" %>
         <content>
             <%= form_tag({action: 'index'}, {method: 'get'}) do %>
-              <input type="text" name="search" id="search" class="search-box", placeholder="探したいマイリスト名やタグを検索" >
+              <input type="text" name="search" id="search" class="search-box", placeholder="探したいリスト名やタグを検索" >
               <%= submit_tag '検索', :name => nil %>
             <% end %>
             <div class="discription">
-                <p class="disc-1"><a href="/mymap_searchs/recomend_mymaps">おすすめの<br>マイリスト</a></p>
-                <p class="disc-2"><a href="/mymap_searchs/following_mymaps">フォローユーザーの<br>新着マイリスト</a></p>
+                <p class="disc-1"><a href="/mymap_searchs/recomend_mymaps">おすすめの<br>リスト</a></p>
+                <p class="disc-2"><a href="/mymap_searchs/following_mymaps">フォローユーザーの<br>新着リスト</a></p>
             </div>
         </content>
         <% if @following_user_mymaps %>
