--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -24,13 +24,13 @@
         <div class="descContainer">
             <div class="desc">
                 <h1>「ここ行きたい」を増やそう</h1>
-                <p>sumireは、"行きたいとこリスト"を作って友達とシェアできるサービスです</p>
+                <p>sumire.は、"行きたいとこリスト"を作って友達とシェアできるサービスです</p>
                 <a href="/auth/facebook" id="upperEnter" class="enter">Facebookでログイン</a>
             </div>
         </div>
         
         <div class="canContainer">
-            <h1>sumireができる、こんなこと</h1>
+            <h1>sumire.ができる、こんなこと</h1>
             <div class="canBoxContainer">
                 <div class="canBox" id="leftCan">
                     <%= image_tag "smt1.png", class: "smt" %>
@@ -63,37 +63,37 @@
                     <%= image_tag "bag.png", class: "pic" %>
                     <p>ジャンル</p>
                 </div>
-                <p>行きたい場所の名称を検索→登録するだけ！<br>あとはその場所の情報をsumireが自動で取得します</p>
+                <p>"行きたいとこ"の名称を検索→登録するだけ！<br>あとはそのスポットの情報をsumire.が自動で取得します</p>
             </div>
         </div>
         
         <div class="useCaseContainer">
-            <h1>たとえばこんな"行きたいとこリスト"</h1>
+            <h1>たとえばこんな自分だけのリスト</h1>
             <div class="useBoxContainer">
                 <div class="useBox" id="leftUse">
                     <%= image_tag "cafe.png", class: "useCase" %>
                     <h3>たとえば...<br>「お気に入りカフェ」リスト</h3>
-                    <p>よく行くお店を<br>リスト化できます。<br>
+                    <p>よく行くお店や気になるお店を<br>リストにまとめられます。<br>
                 </div>
                 <div class="useBox" id="centerUse">
                     <%= image_tag "used.png", class: "useCase" %>
                     <h3>たとえば...<br>「高円寺 好きな服屋」リスト</h3>
-                    <p>飲食店以外の場所も<br>登録できます。</p>
+                    <p>飲食店以外のスポットも<br>登録できます。</p>
                 </div>
                 <div  class="useBox" id="rightUse">
                     <%= image_tag "kyoto.png", class: "useCase" %>
-                    <h3>たとえば...<br>「京都旅行 行きたいとこ」リスト</h3>
-                    <p>お気に入りの場所だけでなく<br>行ったことがない場所でも<br>登録できます。</p>
+                    <h3>たとえば...<br>「京都のおすすめ」リスト</h3>
+                    <p>友達におすすめしたいスポットを<br>リストにしてシェアしましょう。</p>
                 </div>
             </div>
         </div>
 
         <div class="remindContainer">
-            <h1>さあ、sumireをはじめよう。</h1>
+            <h1>さあ、sumire.をはじめよう。</h1>
             <div class="enterBox">
-                <p id="mess1">登録完了まで8秒！</p>
+                <p id="mess1">登録完了まで約7秒！</p>
                 <a href="/auth/facebook" class="enter" id="bottomEnter">ログイン</a>
-                <p id="mess2">登録・利用は一切無料です。利用規約同意の上ご利用ください。</p>
+                <p id="mess2">登録・利用は一切無料です。利用規約に同意の上ご利用ください。</p>
             </div>
         </div>
 
