--- a/app/assets/stylesheets/mymaps/show.css
+++ b/app/assets/stylesheets/mymaps/show.css
@@ -79,6 +79,7 @@
     bottom: 10px;
     height: 26px;
     left: 10px;
+    line-height:14px;
     padding: 3px;
     position: absolute;
     width: 154px;
