--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Sumire</title>
+        <title>Sumire.</title>
         <meta name="description" content="web application that redefines the communication">
         <meta name="author" content="futae">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
