--- a/app/views/mymaps/search.html.erb
+++ b/app/views/mymaps/search.html.erb
@@ -16,7 +16,7 @@
                 <p>この時間に営業中のスポットのみ</p>
                 <div class="switch">
                     <label class="switch__label">
-                        <%= check_box :place, :open_timing, {class: "switch__input"}, "true", "false" %>
+                        <%= check_box :open, :time, {class: "switch__input"}, "true", "false" %>
                         <span class="switch__content"></span>
                         <span class="switch__circle"></span>
                     </label>
