--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -32,5 +32,5 @@
                 <p><%= link_to "編集", edit_user_path(current_user) %></p>
             </div>
             <% end %>
-            <div class="enter"><%= link_to "このユーザーのリストを見る", @user %></div>
+            <a href="/users/<%= @user.id %>"><div class="enter">このユーザーのリストを見る</div></a>
         </content>
