--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Sumire.</title>
-        <meta name="description" content="web application that redefines the communication">
+        <meta name="description" content="sumire.は、友達がどんなスポットをお気に入り登録しているか分かるサービスです。飲食店はもちろん、ショップや美術館、観光名所、自然地形など、あらゆるスポットをお気に入り登録できます。">
         <meta name="author" content="futae">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
